package com.sinhvien.quanlychitieu.adapter;

import android.view.View;

public interface ItemClickListener {
    void onClick(View view, int position, boolean isLongClick);

}
