package com.sinhvien.quanlychitieu.adapter;

public interface OnPagerItemSelected {
    void pagerItemSelected();
}